fix child list not updating and logo not showing

--- a/frontend/src/app/routes/admin-page/child-admin-list/child-admin-list.scss
+++ b/frontend/src/app/routes/admin-page/child-admin-list/child-admin-list.scss
@@ -6,3 +6,7 @@
     border-radius: 12px;
 
 }
+
+mat-list-item {
+    height: auto !important;
+}
